--- a/value_social_work_research_wok.qmd
+++ b/value_social_work_research_wok.qmd
@@ -46,3 +46,5 @@ It is kind of interesting to note that Nordic Social Work Researcher haven't wri
 The reason why this map is identical with the previous is a lack of cooperation (to few to be marked).
 
 ![](ThematicEvolution_2023-02-26.png.png)
+
+vvvv
