--- a/references.bib
+++ b/references.bib
@@ -29,3 +29,134 @@
 	number = {4},
 	note = {Publisher: Elsevier}
 }
+
+@article{rubio2003,
+	title = {Objectifying content validity: Conducting a content validity study in social work research},
+	author = {Rubio, DM and Berg-Weger, M and Tebb, SS and Lee, ES and Rauch, S},
+	year = {2003},
+	month = {06},
+	date = {2003-06},
+	journal = {SOCIAL WORK RESEARCH},
+	pages = {94--104},
+	volume = {27},
+	number = {2},
+	doi = {10.1093/swr/27.2.94},
+	note = {Place: JOURNALS DEPT, 2001 EVANS RD, CARY, NC 27513 USA
+Publisher: OXFORD UNIV PRESS INC
+Type: Article},
+	langid = {English}
+}
+
+@article{saunders2006,
+	title = {Imputing missing data: A comparison of methods for social work researchers},
+	author = {Saunders, JA and Morrow-Howell, N and Spitznagel, E and Dore, P and Proctor, EK and Pescarino, R},
+	year = {2006},
+	month = {03},
+	date = {2006-03},
+	journal = {SOCIAL WORK RESEARCH},
+	pages = {19--31},
+	volume = {30},
+	number = {1},
+	doi = {10.1093/swr/30.1.19},
+	note = {Place: 750 FIRST ST, NE, STE 700, WASHINGTON, DC 20002-4241 USA
+Publisher: NATL ASSOC SOCIAL WORKERS
+Type: Article},
+	langid = {English}
+}
+
+@article{tyson1992,
+	title = {A NEW APPROACH TO RELEVANT SCIENTIFIC-RESEARCH FOR PRACTITIONERS - THE HEURISTIC PARADIGM},
+	author = {TYSON, KB},
+	year = {1992},
+	month = {11},
+	date = {1992-11},
+	journal = {SOCIAL WORK},
+	pages = {541--556},
+	volume = {37},
+	number = {6},
+	note = {Place: 750 FIRST ST, NE, STE 700, WASHINGTON, DC 20002-4241
+Publisher: NATL ASSOC SOCIAL WORKERS
+Type: Article},
+	langid = {English}
+}
+
+@article{swigonski1994,
+	title = {THE LOGIC OF FEMINIST STANDPOINT THEORY FOR SOCIAL-WORK RESEARCH},
+	author = {SWIGONSKI, ME},
+	year = {1994},
+	month = {07},
+	date = {1994-07},
+	journal = {SOCIAL WORK},
+	pages = {387--393},
+	volume = {39},
+	number = {4},
+	note = {Place: 750 FIRST ST, NE, STE 700, WASHINGTON, DC 20002-4241
+Publisher: NATL ASSOC SOCIAL WORKERS
+Type: Article},
+	langid = {English}
+}
+
+@article{klein1995,
+	title = {PRACTICE WISDOM},
+	author = {KLEIN, WC and BLOOM, M},
+	year = {1995},
+	month = {11},
+	date = {1995-11},
+	journal = {SOCIAL WORK},
+	pages = {799--807},
+	volume = {40},
+	number = {6},
+	note = {Place: 750 FIRST ST, NE, STE 700, WASHINGTON, DC 20002-4241
+Publisher: NATL ASSOC SOCIAL WORKERS
+Type: Article},
+	langid = {English}
+}
+
+@article{gomory2001,
+	title = {Critical rationalism (Gomory's blurry theory) or positivism (Thyer's theoretical myopia): Which is the prescription for social work research?},
+	author = {Gomory, T},
+	year = {2001},
+	date = {2001},
+	journal = {JOURNAL OF SOCIAL WORK EDUCATION},
+	pages = {67--78},
+	volume = {37},
+	number = {1},
+	doi = {10.1080/10437797.2001.10779037},
+	note = {Place: 1600 DUKE STREET, ALEXANDRIA, VA 22314 USA
+Publisher: COUNC SOC WORK EDUC
+Type: Article},
+	langid = {English}
+}
+
+@article{anderson-nathe2013,
+	title = {Nurturing {\textquotedblleft}Critical Hope{\textquotedblright} in Teaching Feminist Social Work Research},
+	author = {Anderson-Nathe, Ben and Gringeri, Christina and Wahab, Stephanie},
+	year = {2013},
+	date = {2013},
+	journal = {JOURNAL OF SOCIAL WORK EDUCATION},
+	pages = {277--291},
+	volume = {49},
+	number = {2},
+	doi = {10.1080/10437797.2013.768477},
+	note = {Place: 2-4 PARK SQUARE, MILTON PARK, ABINGDON OX14 4RN, OXON, ENGLAND
+Publisher: ROUTLEDGE JOURNALS, TAYLOR & FRANCIS LTD
+Type: Article},
+	langid = {English}
+}
+
+@article{newman2016,
+	title = {Teaching qualitative research and participatory practices in neoliberal times},
+	author = {Newman, Andrea and McNamara, Yvonne},
+	year = {2016},
+	month = {05},
+	date = {2016-05},
+	journal = {QUALITATIVE SOCIAL WORK},
+	pages = {428--443},
+	volume = {15},
+	number = {3, SI},
+	doi = {10.1177/1473325015624500},
+	note = {Place: 2455 ℡LER RD, THOUSAND OAKS, CA 91320 USA
+Publisher: SAGE PUBLICATIONS INC
+Type: Article},
+	langid = {English}
+}
